lab1/Test/L1-A-10-8.output
Error Type A at Line 3
Error Type B at Line 4
Error Type A at Line 6
Error Type A at Line 13
Error Type B at Line 20
Error Type A at Line 27
Error Type A at Line 37
Error Type B at Line 48
