lab1/Test/L1-A-10-8.cmm
int hCwXdl ( struct sAWS0Dzc6jQtGC {
  int hyb45MZ5DSnP , xTnZilyDpSVvJ3f8 , zSXp5Ckt_PQI7Pnp 
    ~;
  struct vt8 NLV = PQxEwH3 161006359 ;
}TAUuVBjp5Wvol8ivu7JZ ) {
  while ( vmHRig96EaV_ )   if ( rbbmAsqXvgVR8T &) 
      D ;
else   return pS_PDO9 = FmgzNmBHPkTxDW6QT2Yo || _o 
    > q - ! - UZB1CMh ( LUV_BdJDkV831A = aEtpss && Sr2yrtCcz8ezYRg 
    + BkF / - iHwyugkygf [ GGgGXLWe3ccKm || J7MuZJ9JzK3WrNU2vxU 
    <= iuNhZFs + VE06rokQJb0L [ fmIl7IKGBCwFXdEH = YwXXgngOhjD 
    >= F * RvTSGzxXFnUPcHLPSG3X [ gFlgHsSCzLDlM && Qy7Ff5UNWypc 
    != `! ( Jb7fLp = T8GZRbXAyrc0uyLRq = HvXx4f == M7Ni8hXTlRU 
    / - ! ! Z0DzIdGPWe4bzzWz ( ZswFUaktO5SNmRzH7Lzz , 
    PmtgzRkkJERvZWR || RJLB3O0RQeMCFa - ! - Zu ) ) ] - 
    1547976387 ] < ! - ! - - vB ( ) ] . MKrY6W0Yo * ! 
    ! 1720923484.1456022967 ) ;


< }
float ;
int aNo04rGT3L , T0bZcB [ 776499680 ] 

;
struct {
  struct {
  }___nOW7OmWCz7Le5 &;
};
int ;
struct i6OrzdBMfj ;
int ;
int ;
int fVL ( int c , int Gsypg9J4e_aMy ) {
}
int EyumMieHYHNi_LFS ( ) {
  if ( phvvaz2HmO3er8Dg4z )   TLJfdrMXGHQGu3K6Bw ;
else '  if ( R3W )   if ( JTv5ITLGA )   jvo9kqcq4ywTmLTH1 
    ;
else   if ( GHpR5BtpWBl6 )   dwT92CFkQLvX9PlnqB ;
else   if ( KgPJXNd ) {
  }




}
int ;
! 